--- a/src/input.css
+++ b/src/input.css
@@ -1,33 +1,37 @@
-	@tailwind base;
-	@tailwind components;
-	@tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-	body {
-	font-family: "Inter", sans-serif;
-	}
+body {
+  font-family: "Inter", sans-serif;
+}
 
-	.navbar-fixed {
-	@apply fixed z-[999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
-	/* backdrop-filter: blur(5px); */
-	box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
-	}
+.navbar-fixed {
+  @apply fixed z-[999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
+  /* backdrop-filter: blur(5px); */
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+}
 
-	.hamburger-line {
-	@apply my-2 block h-[2px] w-[30px] bg-dark dark:bg-white;
-	}
+.hamburger-line {
+  @apply my-2 block h-[2px] w-[30px] bg-dark dark:bg-white;
+}
 
-	.hamburger-active > span:nth-child(1) {
-	@apply origin-top-left rotate-45;
-	}
+.hamburger-active > span:nth-child(1) {
+  @apply origin-top-left rotate-45;
+}
 
-	.hamburger-active > span:nth-child(2) {
-	@apply scale-0;
-	}
+.hamburger-active > span:nth-child(2) {
+  @apply scale-0;
+}
 
-	.hamburger-active > span:nth-child(3) {
-	@apply origin-bottom-left -rotate-45;
-	}
+.hamburger-active > span:nth-child(3) {
+  @apply origin-bottom-left -rotate-45;
+}
 
-	#dark-toggle:checked ~ label div.toggle-circle {
-	@apply translate-x-5;
-	}
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-5;
+}
+
+.card-shadow{
+  box-shadow: 10px 10px 8px rgb(164, 51, 51);
+}
